--- a/app.css
+++ b/app.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Orbitron:900');
+@import url('https://fonts.googleapis.com/css?family=Orbitron:900|Open Sans');
+*{
+	font-family:"Open Sans", sans-serif;font-weight:400;
+color:#	040404
+}
 .navbar-brand {
 	font-family: "Orbitron", sans-serif;font-weight:900;
 	color:#777777
