--- a/app.css
+++ b/app.css
@@ -4,7 +4,7 @@
 color:#	040404
 }
 .navbar-brand {
-	font-family: "Orbitron", sans-serif;font-weight:900;
+	font-family: "Orbitron", sans-serif !important;font-weight:900;
 	color:#777777
 }
 h1,h2,h3,h4,h5,h6 {
