--- a/app.css
+++ b/app.css
@@ -4,9 +4,9 @@
 color:#	040404
 }
 .navbar-brand {
-	font-family: "Orbitron", sans-serif !important;font-weight:900;
+	font-family: "Orbitron", sans-serif;font-weight:900;
 	color:#777777
 }
-h1,h2,h3,h4,h5,h6 {
+h1,h2,h3,h4,h5,h6,h1 span,h2 span,h3 span,h4 span,h5 span,h6 span {
 	font-family: "Orbitron", sans-serif;font-weight:900;
 }
