--- a/app.css
+++ b/app.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Orbitron:900|Open Sans');
+@import url('https://fonts.googleapis.com/css?family=Orbitron:900');
 *{
 	font-family:"Open Sans", sans-serif;font-weight:400;
 color:#	040404
