--- a/app.css
+++ b/app.css
@@ -7,3 +7,10 @@
 h1,h2,h3,h4,h5,h6,h1 span,h2 span,h3 span,h4 span,h5 span,h6 span {
 	font-family: "Orbitron", sans-serif;font-weight:900;
 }
+body {
+  background-image: url("http://cdn.samyok.us/header.png");
+  background-size: 2000px;
+  background-position: left top;
+  background-color : #FFF; 
+  opacity: 0;
+}
