--- a/app.css
+++ b/app.css
@@ -7,7 +7,7 @@
 h1,h2,h3,h4,h5,h6,h1 span,h2 span,h3 span,h4 span,h5 span,h6 span {
 	font-family: "Orbitron", sans-serif;font-weight:900;
 }
-body {
+html {
   background-image: url("http://cdn.samyok.us/header.png");
   background-size: 2000px;
   background-position: left top;
